code25_all/swift/24049272.txt
import UIKit

func greet(name: String = "world") {
    println("hello \(name)")
}

greet("jiaaro")

Playground execution failed: error: <REPL>:9:7: error: missing argument label 'name:' in call
greet("jiaaro")
      ^
      name:

greet(name: "jiaaro")
